# oci-management-ai

./: .gitignore  .gitlab-ci.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docs-build.yml  python-build.yml
docs/source/: conf.py  index.rst
src/: main-0.py  main-1a.py  main-1b.py  main-2.py  main-3.py  main-4.py
